--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "lib-markdown",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "module",  
   "main": "index.js",
-  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest ./test",
+    "cli": "node cli.js ./arquivos/texto1.md"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.0.1"
+    "chalk": "^5.0.1",
+    "node-fetch": "^3.2.4"
+  },
+  "devDependencies": {
+    "jest": "^28.1.0"
   }
-  
 }
